Implement Delineations Manager